Adding the python file to check sentiment along with the model weight

--- a/sentiment_analysis.ipynb
+++ b/sentiment_analysis.ipynb
@@ -2,12 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using TensorFlow backend.\n"
+     ]
+    }
+   ],
    "source": [
-    "import numpy as np # linear algebra\n",
-    "import pandas as pd # data processing, CSV file I/O (e.g. pd.read_csv)\n",
+    "import numpy as np \n",
+    "import pandas as pd\n",
     "\n",
     "from sklearn.feature_extraction.text import CountVectorizer\n",
     "from keras.preprocessing.text import Tokenizer\n",
@@ -21,18 +29,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "data = pd.read_csv('Sentiment.csv')\n",
-    "# Keeping only the neccessary columns\n",
     "data = data[['text','sentiment']]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -64,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -74,16 +83,19 @@
       "WARNING:tensorflow:From C:\\Users\\Varun\\Anaconda3\\envs\\flow_gpu\\lib\\site-packages\\keras\\backend\\tensorflow_backend.py:1238: calling reduce_sum (from tensorflow.python.ops.math_ops) with keep_dims is deprecated and will be removed in a future version.\n",
       "Instructions for updating:\n",
       "keep_dims is deprecated, use keepdims instead\n",
+      "WARNING:tensorflow:From C:\\Users\\Varun\\Anaconda3\\envs\\flow_gpu\\lib\\site-packages\\keras\\backend\\tensorflow_backend.py:1340: calling reduce_mean (from tensorflow.python.ops.math_ops) with keep_dims is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "keep_dims is deprecated, use keepdims instead\n",
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
       "=================================================================\n",
-      "embedding_3 (Embedding)      (None, 28, 128)           256000    \n",
+      "embedding_1 (Embedding)      (None, 28, 128)           256000    \n",
       "_________________________________________________________________\n",
       "spatial_dropout1d_1 (Spatial (None, 28, 128)           0         \n",
       "_________________________________________________________________\n",
       "lstm_1 (LSTM)                (None, 196)               254800    \n",
       "_________________________________________________________________\n",
-      "dense_5 (Dense)              (None, 2)                 394       \n",
+      "dense_1 (Dense)              (None, 2)                 394       \n",
       "=================================================================\n",
       "Total params: 511,194\n",
       "Trainable params: 511,194\n",
@@ -108,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -129,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -137,18 +149,18 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/2\n",
-      " - 24s - loss: 0.1295 - acc: 0.9478\n",
+      " - 48s - loss: 0.4439 - acc: 0.8111\n",
       "Epoch 2/2\n",
-      " - 21s - loss: 0.1208 - acc: 0.9523\n"
+      " - 49s - loss: 0.3227 - acc: 0.8625\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.callbacks.History at 0x1b004d58fd0>"
+       "<keras.callbacks.History at 0x18f6aebd3c8>"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -160,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -175,6 +187,57 @@
    ],
    "source": [
     "twt = ['  food and excellent service good behavior']\n",
+    "#vectorizing the tweet by the pre-fitted tokenizer instance\n",
+    "twt = tokenizer.texts_to_sequences(twt)\n",
+    "#padding the tweet to have exactly the same shape as `embedding_2` input\n",
+    "twt = pad_sequences(twt, maxlen=28, dtype='int32', value=0)\n",
+    "print(twt)\n",
+    "sentiment = model.predict(twt,batch_size=1,verbose = 2)[0]\n",
+    "if(np.argmax(sentiment) == 0):\n",
+    "    print(\"negative\")\n",
+    "elif (np.argmax(sentiment) == 1):\n",
+    "    print(\"positive\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from keras.models import load_model\n",
+    "\n",
+    "model.save(\"senti.h5\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From C:\\Users\\Varun\\Anaconda3\\envs\\flow_gpu\\lib\\site-packages\\keras\\backend\\tensorflow_backend.py:1238: calling reduce_sum (from tensorflow.python.ops.math_ops) with keep_dims is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "keep_dims is deprecated, use keepdims instead\n",
+      "WARNING:tensorflow:From C:\\Users\\Varun\\Anaconda3\\envs\\flow_gpu\\lib\\site-packages\\keras\\backend\\tensorflow_backend.py:1340: calling reduce_mean (from tensorflow.python.ops.math_ops) with keep_dims is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "keep_dims is deprecated, use keepdims instead\n",
+      "[[   0    0    0    0    0    0    0    0    0    0    0    0    0    0\n",
+      "     0    0    0    0    0    0    0    0    0    0  943    8  139 1699]]\n",
+      "positive\n"
+     ]
+    }
+   ],
+   "source": [
+    "from keras.models import load_model\n",
+    "model = load_model(\"senti.h5\")\n",
+    "\n",
+    "twt = [' excellent food and good service  behavior']\n",
     "#vectorizing the tweet by the pre-fitted tokenizer instance\n",
     "twt = tokenizer.texts_to_sequences(twt)\n",
     "#padding the tweet to have exactly the same shape as `embedding_2` input\n",
